--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <a>What is iGEM??</a>
         <a href="https://igem.org">Pause me to find out!!</a>
         <h4> </h4>
-        <img src="materials/igem-icon.jpg" height="200"/>
+        <img src="igem-icon.jpg" height="200"/>
         <h4> </h4>
-        <video src="materials/igem-intro.mp4" controls height="200">something goes wrong!!</video>
+        <video src="igem-intro.mp4" controls height="200">something goes wrong!!</video>
         <h4> </h4>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Hz7pPXJvhVE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <ol type="I">
